# GameEngine

./: CMakeCache.txt  CMakeLists.txt  a.out  readme.txt
Empty/: CMakeLists.txt  EmptyApplication.cpp
Framework/: CMakeLists.txt
Framework/Common/: Allocator.cpp  Allocator.hpp  BaseApplication.cpp  BaseApplication.h  BaseApplication.hpp  CMakeLists.txt  GfxConfiguration.h  GraphicsManager.cpp  GraphicsManager.hpp  MemoryManager.cpp  MemoryManager.hpp  main.cpp
Framework/Interface/: IApplication.hpp  IRuntimeModule.h  IRuntimeModule.hpp  Interface.h
Platform/Linux/: helloengine_opengl  helloengine_opengl.cpp  helloengine_xcb  helloengine_xcb.c
Platform/Windows/: cbuffer.h  copy.ps  copy.pso  copy.vs  copy.vso  helloengine_d2d.cpp  helloengine_d3d.cpp  helloengine_win.c  vsoutput.hs
